<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shashankshivakumar.bmi.BMIActivity"
    android:background="@android:color/holo_blue_dark"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toggle"
        android:layout_marginBottom="10dp"
        android:text="@string/bmi_calculator"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_light"
        android:checked="false"
        android:defaultFocusHighlightEnabled="false"
        android:textOff="@string/metric"
        android:textOn="@string/standard"
        android:textSize="24sp" tools:targetApi="o"/>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/metric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/your_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/your_weight"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/weight_hint"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/your_height"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/height_hint"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/yr_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/yr_weight"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lbweight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/wt_hint"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yr_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/yr_height"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/feet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:hint="@string/ft_hint"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:hint="@string/in_hint"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_compute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/container"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/bmi_calculate"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_compute"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
